--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -62,11 +62,10 @@
     </div>
 </div>
 
-
 @*här börjar uppgiftsindelningen*@
-                <div class="well-lg" style="background-color:#e0e0e0">
+<div class="well-lg" style="background-color:#e0e0e0">
     <div class="container-fluid">
-        <input type="submit" value="Alla uppgifter" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large"  />
+        <input type="submit" value="Alla uppgifter" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large" />
 
         @*START KALENDER*@
         <div class="agenda">
@@ -77,8 +76,7 @@
                             <th>Startdatum</th>
                             <th>Beskrivning</th>
                             <th>Uppgift</th>
-                            <th>Ansvarig</th>
-                            <th>Påbörjad</th>
+                            <th>Ansvarig</th>                            
                         </tr>
                     </thead>
 
@@ -100,83 +98,74 @@
                                 <td class="agenda-events" style="background-color:#e0e0e0">
                                     <div class="agenda-event">
 
-                                        @*om inloggad är ansvarig för uppgiften*@
-                                        @if (ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                                        @*ingen ansvarig*@
+                                        @if (ev.Ansvarig == null)
                                         {
-                                            
+                                            <button class="btn btn-primary" type="button" style="background-color:#9d4040" id="edit"
+                                                    onclick="location.href='@Url.Action("UppgiftsSida", "uppgifter", new { idet  = ev.UppgifterID })'" title="@ev.UppgifterID">
+                                                @ev.Namn <span class="badge">ej tagen</span>
+                                            </button>
+                                        }
+                                        @*inloggad är ansvarig*@
+                                        else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                                        {
                                             if (ev.Påbörjad == true)
                                             {
-                                                <button class="btn btn-primary" type="button" style="background-color:#3e8d27" id="edit"
+                                                <button class="btn btn-primary" type="button" style="background-color:#d46666" id="edit"
                                                         onclick="location.href='@Url.Action("Edit", "uppgifter", new { id  = ev.UppgifterID })'" title="@ev.UppgifterID">
                                                     @ev.Namn <span class="badge">Påbörjad</span>
                                                 </button>
                                             }
                                             else if (ev.Påbörjad == false)
                                             {
-                                                <button class="btn btn-primary" type="button" style="background-color:#3e8d27" id="edit"
+                                                <button class="btn btn-primary" type="button" style="background-color:#c75151" id="edit"
                                                         onclick="location.href='@Url.Action("Edit", "uppgifter", new { id  = ev.UppgifterID })'" title="@ev.UppgifterID">
                                                     @ev.Namn <span class="badge">ej påbörjad</span>
                                                 </button>
                                             }
-                                            else if (ev.Påbörjad == true && ev.Utförd == true)
+                                            else if (ev.Utförd == true)
                                             {
-                                                <button class="btn btn-primary" type="button" style="background-color:#3e8d27; cursor: default">
+                                                <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
                                                     @ev.Namn <span class="badge">Klar</span>
                                                 </button>
                                             }
-                                        }
-                                        @*om inloggad inte ansvarar för uppgiften, och inte är ledare*@
-                                        else if (ev.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
-                                        {
 
+                                        }
+                                        else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
+                                        {
                                             if (ev.Påbörjad == true)
                                             {
-                                                <button class="btn btn-primary" type="button" style="cursor: default">
+                                                <button class="btn btn-primary" type="button" style="background-color:#d46666; cursor: default" id="edit">
                                                     @ev.Namn <span class="badge">Påbörjad</span>
                                                 </button>
                                             }
                                             else if (ev.Påbörjad == false)
                                             {
-                                                //om den är fri att ta på sig
-                                                if (ev.Ansvarig.AnvändarID == 0)
-                                                {
-                                                    <button class="btn btn-primary" type="button" style="background-color:#808080" id="uppgiftssida">
-                                                        onclick="location.href='@Url.Action("upgiftssida", "uppgifter", new { id = ev.UppgifterID })'" title="@ev.UppgifterID">
-                                                        @ev.Namn <span class="badge">inte påbörjad</span>
-                                                    </button>
-                                                }
-                                                //om den är upptagen av någon annan
-                                                else if (ev.Ansvarig.AnvändarID > 0 && ev.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
-                                                {
-                                                    <button class="btn btn-primary" type="button" style="cursor: default">
-                                                        @ev.Namn <span class="badge">Klar</span>
-                                                    </button>
-                                                }
-
+                                                <button class="btn btn-primary" type="button" style="background-color:#c75151; cursor: default" id="edit">
+                                                    @ev.Namn <span class="badge">ej påbörjad</span>
+                                                </button>
                                             }
-                                            else if (ev.Påbörjad == true && ev.Utförd == true)
+                                            else if (ev.Utförd == true)
                                             {
-                                                <button class="btn btn-primary" type="button" style="background-color:#3e8d27; cursor: default">
+                                                <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
                                                     @ev.Namn <span class="badge">Klar</span>
                                                 </button>
                                             }
-
                                         }
-
-</div>
+                                    </div>
                                 </td>
 
                                 <td class="agenda-events" style="background-color:#e0e0e0">
                                     <div class="agenda-event">
                                         @if (ev.Ansvarig != null)
-	                                    {
-		                                     @ev.Ansvarig.HelaNamnet
+                                        {
+                                            @ev.Ansvarig.HelaNamnet
                                         }
                                         else if (ev.Ansvarig == null)
                                         {
                                             <a>ingen har tagit på sig den här uppgiften än</a>
-                                        } 
-                                        </div>
+                                        }
+                                    </div>
 
                             </tr>
                         </tbody>
@@ -188,7 +177,6 @@
         </div>
     </div>
 </div>
-                
 
 
 
