--- a/Systemet/Views/Grupp/Edit.cshtml
+++ b/Systemet/Views/Grupp/Edit.cshtml
@@ -8,7 +8,7 @@
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
     <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
-    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", new { Model.Item1.GruppNamn }, null)</li>
+    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", new { Model.GruppNamn }, null)</li>
     <li class="active">Redigera Grupp</li>
 </ol>
 
