--- a/Systemet/Views/Grupp/gåmedigrupp.cshtml
+++ b/Systemet/Views/Grupp/gåmedigrupp.cshtml
@@ -16,7 +16,7 @@
 
             <div class="row">
 
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <div class="input-group pull-left">
 
                         
@@ -28,13 +28,28 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="input-group pull-right">
-                        @using (Html.BeginForm("gruppsida", "Grupp", new { item.GruppNamn }))
-                        {
-                            <input type="submit" value="Ansök till Grupp" class="input-group btn btn-sm" id="gåmedigruppknapp" />
-                        }
+                <div class="col-lg-4">
+                    <div class="span4 proj-div" data-toggle="modal" data-target="#GSCCModal"><span class="label-default">Ansök</span></div>
 
+                    <div id="GSCCModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;  </button>
+                                    <h4 class="modal-title" id="myModalLabel">Ansök</h4>
+                                </div>
+                                <div class="modal-body">
+                                    @using (Html.BeginForm("gruppsida", "Grupp", new { item.GruppNamn }))
+                                    {
+                                        <input type="submit" value="@item.GruppNamn" class="input-group btn btn-lg pull-left btn-danger" id="gruppknapp" />
+                                    }
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
