--- a/Systemet/Views/Grupp/minagrupper.cshtml
+++ b/Systemet/Views/Grupp/minagrupper.cshtml
@@ -9,42 +9,42 @@
     <li class="active">Mina Grupper</li>
 </ol>
 
-<h2>minagrupper</h2>
+<h2>Mina Grupper</h2>
 
 <p></p>
 
 <p>
     @Html.ActionLink("Skapa ny grupp", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.GruppNamn)
-        </th>
-        <th>
-            <div>Gör saker</div>
-          
-        </th>
-        <th></th>
-    </tr>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.GruppNamn)
+            </th>
+            <th>
+                <div>Gör saker</div>
+            </th>
+            <th></th>
+        </tr>
 
 
+        @foreach (var item in ViewBag.minagrupper)
+        {
+            <tr>
+                <td>
+                    <a href="@Url.Action("gruppsida", new { GruppNamn = item.GruppNamn })" title="@item.GruppNamn">
+                        @item.GruppNamn
+                    </a>
+                </td>
 
-@foreach (var item in ViewBag.minagrupper) {
-    <tr>
-        <td>
-            <a href="@Url.Action("gruppsida", new { GruppNamn = item.GruppNamn })" title="@item.GruppNamn">
-                @item.GruppNamn
-            </a>          
-        </td>
-        
-        
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GruppID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GruppID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GruppID })
-        </td>
-    </tr>
-}
 
-</table>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.GruppID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.GruppID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.GruppID })
+                </td>
+            </tr>
+        }
+
+    </table>
+
