--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -15,7 +15,7 @@
 
  <div class="well-lg" style="background-color:#eee">
     <div class="container-fluid">
-        <input type="submit" value="Alla evenemang" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large" />
+        <input type="submit" value="Alla evenemang" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large; cursor: default" />
 
         @*START KALENDER*@
         <div class="agenda">
@@ -56,16 +56,26 @@
                     }
 
                 </table>
+                @*skapa evenemang*@
+                @if (Model.Item1.LedareID == Convert.ToInt32(Session["AnvändarID"]))
+                {
+                    <button class="btn btn-primary" type="button" style="background-color:black"
+                            onclick="location.href='@Url.Action("Create", "Evenemangs", new { id= Model.Item1.GruppID}, null)'" title="">
+                        Skapa evenemang </button>
+                }
             </div>
 
         </div>
     </div>
 </div>
+<div class="form-group">
+    &nbsp;
+</div>
 
 @*här börjar uppgiftsindelningen*@
 <div class="well-lg" style="background-color:#e0e0e0">
     <div class="container-fluid">
-        <input type="submit" value="Alla uppgifter" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large" />
+        <input type="submit" value="Alla uppgifter" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large; cursor: default" />
 
         @*START KALENDER*@
         <div class="agenda">
@@ -172,6 +182,14 @@
                     }
 
                 </table>
+                @if (Model.Item1.LedareID == Convert.ToInt32(Session["AnvändarID"]))
+                {
+                    <button class="btn btn-primary" type="button" style="background-color:black"
+                            onclick="location.href='@Url.Action("Create", "Uppgifter", new { id= Model.Item1.GruppID}, null)'" title="">
+                        Skapa uppgift
+                    </button>
+                }
+                
             </div>
 
         </div>
@@ -180,7 +198,7 @@
 
 
 
-        <p>@Html.ActionLink("Lägg till Uppgift", "Create", "Uppgifter")</p>
+
 
 
 
