--- a/Systemet/Views/Evenemangs/Create.cshtml
+++ b/Systemet/Views/Evenemangs/Create.cshtml
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <link rel='stylesheet' type='text/css' href='css/timepicker.css' />
     ViewBag.Title = "Create";
+    TempData["nygrupp"] = ViewBag.gruppnamnet;
 }
 <link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
 
 <ol class="breadcrumb">
-    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
-    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
-    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
-    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
+    <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
+    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", null, null)</li>
     <li class="active">Skapa Evenemang</li>
 </ol>
 
@@ -63,15 +63,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
