--- a/Systemet/Views/Grupp/gåmedigrupp.cshtml
+++ b/Systemet/Views/Grupp/gåmedigrupp.cshtml
@@ -10,26 +10,28 @@
 
     @foreach (var item in Model)
     {
-        
 
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="input-group pull-left">
 
+                    @*@using (Html.BeginForm("gruppsida", "Grupp", new { item.GruppNamn }))
+                        {
+                            <input type="submit" value="@item.GruppNamn" class="input-group btn btn-lg pull-left btn-danger" id="gruppknapp" />
+                        }*@
+                    <div class="container">
+                        <a href="#demo" class="btn btn-info" data-toggle="collapse">@item.GruppNamn</a>
+                        <div id="demo" class="collapse">
 
-            <div class="row">
-
-                <div class="col-lg-4">
-                    <div class="input-group pull-left">
-
-                        
-                            @using (Html.BeginForm("gruppsida", "Grupp", new { item.GruppNamn }))
-                            {
-                                <input type="submit" value="@item.GruppNamn" class="input-group btn btn-lg pull-left btn-danger" id="gruppknapp" />
-                            }
-                        
+                        </div>
                     </div>
-                </div>
 
-                <div class="col-lg-4">
-                    <div class="span4 proj-div" data-toggle="modal" data-target="#GSCCModal"><span class="label-default">Ansök</span></div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                @*<div class="span4 proj-div" data-toggle="modal" data-target="#GSCCModal"><span class="label-default">Ansök</span></div>
 
                     <div id="GSCCModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -50,11 +52,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-
+                    </div>*@
             </div>
-            
+
+        </div>
+
             <div class="form-group">
                 &nbsp;
             </div>
