--- a/Systemet/Views/Uppgifter/Create.cshtml
+++ b/Systemet/Views/Uppgifter/Create.cshtml
@@ -46,10 +46,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Startdatum, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Slutdatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Startdatum, htmlAttributes: new { id = "datetimepickerfinal", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Startdatum, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.Slutdatum, htmlAttributes: new { id = "datetimepickerfinal", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Slutdatum, "", new { @class = "text-danger" })
             </div>
         </div>
 
