--- a/Systemet/Views/Uppgifter/Delete.cshtml
+++ b/Systemet/Views/Uppgifter/Delete.cshtml
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Startdatum)
+            @Html.DisplayNameFor(model => model.Slutdatum)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Startdatum)
+            @Html.DisplayFor(model => model.Slutdatum)
         </dd>
 
 
