--- a/Systemet/Views/Uppgifter/Edit.cshtml
+++ b/Systemet/Views/Uppgifter/Edit.cshtml
@@ -59,10 +59,10 @@
         }
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Startdatum, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Slutdatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Startdatum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Startdatum, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Slutdatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Slutdatum, "", new { @class = "text-danger" })
             </div>
         </div>
 
