--- a/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
+++ b/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
@@ -31,6 +31,10 @@
     @Html.DisplayFor(model => Model.uppgift.Beskrivning)
 </dd>
 
+<dd>
+    @Html.DisplayFor(model => Model.uppgift.Slutdatum)
+</dd>
+
 @if (Model.uppgift.Ansvarig == null)
 {
 
