--- a/Systemet/Views/Uppgifter/Details.cshtml
+++ b/Systemet/Views/Uppgifter/Details.cshtml
@@ -64,11 +64,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Startdatum)
+            @Html.DisplayNameFor(model => model.Slutdatum)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Startdatum)
+            @Html.DisplayFor(model => model.Slutdatum)
         </dd>
 
     </dl>
