--- a/Systemet/Views/Uppgifter/Index.cshtml
+++ b/Systemet/Views/Uppgifter/Index.cshtml
@@ -24,7 +24,7 @@
             @Html.DisplayNameFor(model => model.Påbörjad)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Startdatum)
+            @Html.DisplayNameFor(model => model.Slutdatum)
         </th>
         <th></th>
     </tr>
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.Påbörjad)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Startdatum)
+            @Html.DisplayFor(modelItem => item.Slutdatum)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UppgifterID }) |
