--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -18,7 +18,7 @@
 
 <h2>@Model.Item1.Namn</h2>
 
-<p>här ska man kunna se info om vart, när och hur. man ska kunna kommentera eventet och man ska kunna läsa tidigare kommentarer</p>
+<p>@Model.Item1.Beskrivning</p>
 
 
 
@@ -81,14 +81,6 @@
         <!-- End tab comment and popular posts -->
     </div>
 </div>
-
-
-
-<!-- Button trigger modal -->
-@*<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" 
-        onclick="location.href='@Url.Action("komments", "EvenemangsKommentarers", new { id = Model.Item1.EvenemangID }, null)'">
-    Launch demo modal
-</button>*@
 
 
 
