--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -48,7 +48,7 @@
                 <!-- Pane comments -->
                 <div class="tab-pane active animated fadeInRight" id="comments">
                     <!-- Begin scroll wrappper -->
-                    <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 325px;">
+                    <div class="slimScrollDiv">
                         <div class="scroll-widget">
                             <ul class="media-list">
 
@@ -68,7 +68,7 @@
                             </ul>
 
                         </div>
-                    <div class="slimScrollBar" style="width: 3px; position: absolute; top: 11px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; left: 1px; height: 209.5734126984127px; background: rgb(134, 134, 134);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; opacity: 0.3; z-index: 90; left: 1px; background: rgb(51, 51, 51);"></div>
+                    <div class="slimScrollBar"></div><div class="slimScrollRail"></div>
 
                     </div><!-- End div .scroll-widget -->
 
