--- a/Systemet/Views/Grupp/Delete.cshtml
+++ b/Systemet/Views/Grupp/Delete.cshtml
@@ -29,6 +29,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.beskrivning)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.beskrivning)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.LedareID)
         </dt>
 
