--- a/Systemet/Views/Konto/inloggad.cshtml
+++ b/Systemet/Views/Konto/inloggad.cshtml
@@ -25,6 +25,22 @@
 
             <div class="col-lg-6">
 
+                @if (Model.Item1.Föfrågningar != null)
+                {
+                    
+                    //int tempid = Convert.ToInt32(TempData["användarID"]);
+                    //var förfrågningar = Model.Item1.Föfrågningar.Where(f => f.AnvändareSomFrågar.AnvändarID == tempid);
+                    //var grupper = Model.Item2.Where(m => m.GruppID == förfrågningar.SingleOrDefault(f => f.Godkänd == false).GruppFörfråganGäller.GruppID);
+                }
+
+                    <h2>Ansökningar</h2>
+
+                    <div class="label" Value="gruppnamn"><span class="label label-info"></span></div>
+                    
+                    }
+
+
+
                 @using (Html.BeginForm("gåmedigrupp", "Grupp"))
                 {
                     <div class="input-group pull-right">
