--- a/Systemet/Views/Uppgifter/Create.cshtml
+++ b/Systemet/Views/Uppgifter/Create.cshtml
@@ -14,11 +14,11 @@
     <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
     <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
     <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", null, null)</li>
-    <li class="active">Skapa Evenemang</li>
+    <li class="active">Skapa uppgift</li>
 </ol>
 
 
-<h2>Skapa ett evenemang</h2>
+<h2>Skapa uppgift åt gruppen</h2>
 
 
 @using (Html.BeginForm()) 
