--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -81,7 +81,13 @@
         <!-- End tab comment and popular posts -->
     </div>
 </div>
-
+@if (Model.Item1.grupp.LedareID == Convert.ToInt32(Session["AnvändarID"]))
+    {
+<button class="btn btn-primary" type="button" style="background-color:black" id="delete"
+        onclick="location.href='@Url.Action("DeleteConfirmed", "Evenemangs", new { id = Model.Item1.EvenemangID })'" title="">
+    Radera evenemanget
+</button>
+    }
 
 
 
